--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   },
   "dependencies": {
     "hexo": "^4.2.1",
+    "hexo-abbrlink": "^2.0.5",
+    "hexo-all-minifier": "^0.5.3",
     "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
-    "hexo-generator-index": "^1.0.0",
+    "hexo-generator-index-pin-top": "^0.2.2",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^1.1.0",
-    "hexo-server": "^1.0.0"
+    "hexo-server": "^1.0.0",
+    "hexo-tag-dplayer": "^0.3.3"
   }
 }
